fix burger position & horizontal scroll cause hr line
- hr line (width -> max-width)

--- a/scss/blocks/_burger.scss
+++ b/scss/blocks/_burger.scss
@@ -11,8 +11,9 @@
     align-items: center;
     position: fixed;
     // top: 65%;
-    top: 2%;
-    right: 1%;
+    top: 3vh;
+    // right: 1%;
+    left: 90vw;
     z-index: 2;
 }
 .burger__line {
