--- a/scss/style.scss
+++ b/scss/style.scss
@@ -708,7 +708,7 @@ body {
 }
 
 .footer-line {
-    width: 1110px;
+    max-width: 1110px;
     margin-bottom: 61px;
 }
 
